--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <option value="bengkulu.html">Bengkulu</option>
             <option value="sumsel.html">Sumatera Selatan</option>
             <option value="babel.html">Kepulauan Bangka Belitung</option>
-            <option value="lampung/index.html">Lampung</option>
+            <option value="Lampung/index.html">Lampung</option>
             <option value="banten.html">Banten</option>
             <option value="jakarta.html">DKI Jakarta</option>
             <option value="jabar.html">Jawa Barat</option>
