--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <option value="sumsel.html">Sumatera Selatan</option>
             <option value="babel.html">Kepulauan Bangka Belitung</option>
             <option value="lampung/index.html">Lampung</option>
-            <option value="banten/index.html">Banten</option>
+            <option value="BANTEN/index.html">Banten</option>
             <option value="jakarta.html">DKI Jakarta</option>
             <option value="jabar.html">Jawa Barat</option>
             <option value="jateng.html">Jawa Tengah</option>
