--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <option value="babel.html">Kepulauan Bangka Belitung</option>
             <option value="Lampung/index.html">Lampung</option>
             <option value="BANTEN/index.html">Banten</option>
-            <option value="jakarta.html">DKI Jakarta</option>
+            <option value="JAKARTA/index.html">DKI Jakarta</option>
             <option value="jabar.html">Jawa Barat</option>
             <option value="jateng.html">Jawa Tengah</option>
             <option value="yogyakarta.html">DI Yogyakarta</option>
