--- a/Lampung/index.html
+++ b/Lampung/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropdown Wilayah Lampung</title>
+    <title>kode Wilayah untuk Lampung</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Pilih Wilayah di Lampung</h1>
+        <h1 class="text-center">Pilih kode Wilayah di Lampung</h1>
         <div class="form-group">
             <label for="kabupaten">Kabupaten/Kota:</label>
             <select id="kabupaten" class="form-control" onchange="updateKecamatan()">
