--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pilih Provinsi</title>
+    <title>Pencarian Kode Wilayah</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         .container {
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container text-center">
-        <h1>Pilih Provinsi di Indonesia</h1>
+        <h1>Pilih Provinsi anda di Indonesia</h1>
         <select id="provinsiDropdown" class="form-control mt-4" onchange="goToPage()">
             <option value="">-- Pilih Provinsi --</option>
             <option value="aceh.html">Nanggroe Aceh Darussalam</option>
