--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <option value="sumbar.html">Sumatera Barat</option>
             <option value="riau.html">Riau</option>
             <option value="kepri.html">Kepulauan Riau</option>
-            <option value="jambi.html">Jambi</option>
+            <option value="jambi/index.html">Jambi</option>
             <option value="bengkulu.html">Bengkulu</option>
             <option value="sumsel.html">Sumatera Selatan</option>
             <option value="babel.html">Kepulauan Bangka Belitung</option>
