--- a/index.html
+++ b/index.html
@@ -17,43 +17,42 @@
         <select id="provinsiDropdown" class="form-control mt-4" onchange="goToPage()">
             <option value="">-- Pilih Provinsi --</option>
             <option value="aceh/index.html">Nanggroe Aceh Darussalam</option>
-            <option value="sumut/index.html">Sumatera Utara</option>
-            <option value="sumbar/index.html">Sumatera Barat</option>
-            <option value="riau/index.html">Riau</option>
-            <option value="kepri/index.html">Kepulauan Riau</option>
-            <option value="jambi/index.html">Jambi</option>
-            <option value="bengkulu/index.html">Bengkulu</option>
-            <option value="sumsel/index.html">Sumatera Selatan</option>
+            <option value="bali/index.html">Bali</option>
             <option value="babel/index.html">Kepulauan Bangka Belitung</option>
-            <option value="Lampung/index.html">Lampung</option>
             <option value="BANTEN/index.html">Banten</option>
-            <option value="JAKARTA/index.html">DKI Jakarta</option>
+            <option value="bengkulu/index.html">Bengkulu</option>
+            <option value="gorontalo/index.html">Gorontalo</option>
+            <option value="jakarta/index.html">DKI Jakarta</option>
             <option value="jabar/index.html">Jawa Barat</option>
             <option value="jateng/index.html">Jawa Tengah</option>
-            <option value="yogyakarta/index.html">DI Yogyakarta</option>
             <option value="jatim/index.html">Jawa Timur</option>
-            <option value="bali/index.html">Bali</option>
-            <option value="ntb/index.html">Nusa Tenggara Barat</option>
-            <option value="ntt/inndex.html">Nusa Tenggara Timur</option>
             <option value="kalbar/index.html">Kalimantan Barat</option>
-            <option value="kalteng/index.html">Kalimantan Tengah</option>
             <option value="kalsel/index.html">Kalimantan Selatan</option>
+            <option value="kalteng/index.html">Kalimantan Tengah</option>
             <option value="kaltim/index.html">Kalimantan Timur</option>
             <option value="kalut/index.html">Kalimantan Utara</option>
-            <option value="sulut/index.html">Sulawesi Utara</option>
-            <option value="sulteng/index.html">Sulawesi Tengah</option>
-            <option value="sulsel/index.html">Sulawesi Selatan</option>
-            <option value="sulbar/index.html">Sulawesi Barat</option>
-            <option value="sultra/index.html">Sulawesi Tenggara</option>
-            <option value="gorontalo/index.html">Gorontalo</option>
+            <option value="kepri/index.html">Kepulauan Riau</option>
+            <option value="Lampung/index.html">Lampung</option>
             <option value="maluku/index.html">Maluku</option>
             <option value="malut/index.html">Maluku Utara</option>
+            <option value="ntb/index.html">Nusa Tenggara Barat</option>
+            <option value="ntt/index.html">Nusa Tenggara Timur</option>
             <option value="papua/index.html">Papua</option>
             <option value="papuabarat/index.html">Papua Barat</option>
-            <option value="papuatengah/index.html">Papua Tengah</option>
+            <option value="papuabaratdaya/index.html">Papua Barat Daya</option>
             <option value="papuapegunungan/index.html">Papua Pegunungan</option>
             <option value="papuaselatan/index.html">Papua Selatan</option>
-            <option value="papuabaratdaya/index.html">Papua Barat Daya</option>
+            <option value="papuatengah/index.html">Papua Tengah</option>
+            <option value="riau/index.html">Riau</option>
+            <option value="sulbar/index.html">Sulawesi Barat</option>
+            <option value="sulsel/index.html">Sulawesi Selatan</option>
+            <option value="sulteng/index.html">Sulawesi Tengah</option>
+            <option value="sultra/index.html">Sulawesi Tenggara</option>
+            <option value="sulut/index.html">Sulawesi Utara</option>
+            <option value="sumbar/index.html">Sumatera Barat</option>
+            <option value="sumsel/index.html">Sumatera Selatan</option>
+            <option value="sumut/index.html">Sumatera Utara</option>
+            <option value="yogyakarta/index.html">DI Yogyakarta</option>
         </select>
     </div>
 
