--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <option value="BANTEN/index.html">Banten</option>
             <option value="bengkulu/index.html">Bengkulu</option>
             <option value="gorontalo/index.html">Gorontalo</option>
+			<option value="jambi/index.html">Jambi</option>
             <option value="jakarta/index.html">DKI Jakarta</option>
             <option value="jabar/index.html">Jawa Barat</option>
             <option value="jateng/index.html">Jawa Tengah</option>
