--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <h1>Pilih Provinsi anda di Indonesia</h1>
         <select id="provinsiDropdown" class="form-control mt-4" onchange="goToPage()">
             <option value="">-- Pilih Provinsi --</option>
-            <option value="aceh/index.html">Nanggroe Aceh Darussalam</option>
+            <option value="aceh/index.html">Aceh</option>
             <option value="bali/index.html">Bali</option>
-            <option value="babel/index.html">Kepulauan Bangka Belitung</option>
             <option value="BANTEN/index.html">Banten</option>
             <option value="bengkulu/index.html">Bengkulu</option>
+			<option value="yogyakarta/index.html">Daerah Istimewa Yogyakarta</option>
+			<option value="jakarta/index.html">DKI Jakarta</option>
             <option value="gorontalo/index.html">Gorontalo</option>
 			<option value="jambi/index.html">Jambi</option>
-            <option value="jakarta/index.html">DKI Jakarta</option>
             <option value="jabar/index.html">Jawa Barat</option>
             <option value="jateng/index.html">Jawa Tengah</option>
             <option value="jatim/index.html">Jawa Timur</option>
@@ -32,6 +32,7 @@
             <option value="kalteng/index.html">Kalimantan Tengah</option>
             <option value="kaltim/index.html">Kalimantan Timur</option>
             <option value="kalut/index.html">Kalimantan Utara</option>
+			<option value="babel/index.html">Kepulauan Bangka Belitung</option>
             <option value="kepri/index.html">Kepulauan Riau</option>
             <option value="Lampung/index.html">Lampung</option>
             <option value="maluku/index.html">Maluku</option>
@@ -53,7 +54,6 @@
             <option value="sumbar/index.html">Sumatera Barat</option>
             <option value="sumsel/index.html">Sumatera Selatan</option>
             <option value="sumut/index.html">Sumatera Utara</option>
-            <option value="yogyakarta/index.html">DI Yogyakarta</option>
         </select>
     </div>
 
